syntax = "proto3";

package sfc_request;

import "Models/Request/Data/data_value.proto";

option csharp_namespace = "SFC.Request.Contracts.Messages.Request.Data.GetAll";

message GetAllRequestDataResponse
{   
    repeated DataValue request_statuses = 1;    
}